cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_371.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/s3_enc.c:421: error: DEAD_STORE
  The value written to &n (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/s3_enc.c:421:12: Write of unused value
419.                                                       (void *)session->master_key,
420.                                                       session->master_key_length);
421.       params[n++] = OSSL_PARAM_construct_end();
                  ^
422.   }
423.   
